cabal-version: 3.4
name: humblr-frontend
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/konn/humblr/humblr-frontend#readme>
homepage: https://github.com/konn/humblr#readme
bug-reports: https://github.com/konn/humblr/issues
author: Hiromi ISHII
maintainer: konn.jinro_at_gmail.com
copyright: (c) Hiromi ISHII 2024- present
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
tested-with:
  ghc ==9.10.1

extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/konn/humblr
  subdir: humblr-frontend

common defaults
  autogen-modules: Paths_humblr_frontend
  other-modules: Paths_humblr_frontend
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  default-language: GHC2021
  build-depends: base >=4.7 && <5

  if !os(wasi)
    build-depends: ghc-wasm-compat
    ghc-options:
      -fplugin
      GHC.Wasm.FFI.Plugin

library
  import: defaults
  build-depends:
    cmark,
    generic-lens,
    http-types,
    humblr-core,
    humblr-frontend:internal,
    lens,
    miso,
    safe-exceptions,
    servant,
    servant-auth-lite-client,
    servant-client-core,
    servant-client-fetch,
    text,

  hs-source-dirs: src
  -- cabal-gild: discover src --exclude=src/**/Internal.hs --exclude=src/**/Internal/**/*.hs
  exposed-modules:
    Humblr.Frontend
    Humblr.Frontend.Actions
    Humblr.Frontend.Types
    Humblr.Frontend.View

  -- cabal-gild: discover src --include=src/**/Internal.hs --include=src/**/Internal/**/*.hs
  other-modules:

executable humblr-frontend
  import: defaults
  hs-source-dirs: app
  main-is: Main.hs
  -- cabal-gild: discover app --exclude=app/Main.hs
  other-modules:
  ghc-options: -O2
  build-depends: humblr-frontend

  if os(wasi)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=hs_start"
  else
    ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N

library internal
  import: defaults
  visibility: private

  if os(wasi)
    build-depends: jsaddle-wasm
    hs-source-dirs: internal-wasm
    -- cabal-gild: discover internal-wasm
    exposed-modules: Language.Javascript.JSaddle.Runner
  else
    build-depends:
      bytestring,
      data-default,
      jsaddle,
      jsaddle-wkwebview,

    hs-source-dirs: internal-ghc
    -- cabal-gild: discover internal-ghc
    exposed-modules: Language.Javascript.JSaddle.Runner
