cabal-version: 3.4
name: humblr-worker
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/konn/humblr/humblr-worker#readme>
homepage: https://github.com/konn/humblr#readme
bug-reports: https://github.com/konn/humblr/issues
author: Hiromi ISHII
maintainer: konn.jinro_at_gmail.com
copyright: (c) Hiromi ISHII 2024- present
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
tested-with:
  ghc ==9.10.1

extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/konn/humblr
  subdir: humblr-worker

common defaults
  autogen-modules: Paths_humblr_worker
  other-modules: Paths_humblr_worker
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  if !os(wasi)
    ghc-options:
      -fplugin
      GHC.Wasm.FFI.Plugin
  default-language: GHC2021
  build-depends:
    base >=4.7 && <5,
    ghc-wasm-compat,

library
  import: defaults
  build-depends:
    aeson,
    async,
    bytestring,
    case-insensitive,
    cloudflare-worker,
    containers,
    effectful,
    generic-lens,
    ghc-wasm-compat,
    ghc-wasm-jsobjects,
    http-types,
    humblr-core,
    lens,
    mime-types,
    network-uri,
    safe-exceptions,
    servant,
    servant-auth-cloudflare-workers,
    servant-auth-lite,
    servant-cloudflare-workers,
    servant-cloudflare-workers-effectful,
    streaming,
    streaming-bytestring,
    text,
    time,
    time-effectful,
    vector,
    wasm-linear-base,
    web-sys-hs,

  hs-source-dirs: src
  -- cabal-gild: discover src --exclude=src/**/Internal.hs --exclude=src/**/Internal/**/*.hs
  exposed-modules: Humblr.Worker
  -- cabal-gild: discover src --include=src/**/Internal.hs --include=src/**/Internal/**/*.hs
  other-modules:

executable humblr-worker
  import: defaults
  hs-source-dirs: app/frontend
  main-is: Main.hs
  -- cabal-gild: discover app/frontend --exclude=app/frontend/Main.hs
  other-modules:

  if os(wasi)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=handlers"
  build-depends: humblr-worker
