cabal-version: 3.4
name: humblr-workers
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/konn/humblr/humblr-workers#readme>
homepage: https://github.com/konn/humblr#readme
bug-reports: https://github.com/konn/humblr/issues
author: Hiromi ISHII
maintainer: konn.jinro_at_gmail.com
copyright: (c) Hiromi ISHII 2024- present
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
tested-with:
  ghc ==9.10.1

extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/konn/humblr
  subdir: humblr-worker

common defaults
  autogen-modules: Paths_humblr_workers
  other-modules: Paths_humblr_workers
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  if !os(wasi)
    ghc-options:
      -fplugin
      GHC.Wasm.FFI.Plugin
  default-language: GHC2021
  build-depends:
    base >=4.7 && <5,
    ghc-wasm-compat,

library
  import: defaults
  build-depends:
    aeson,
    base64-bytestring,
    bytestring,
    case-insensitive,
    cloudflare-worker,
    generic-lens,
    ghc-wasm-compat,
    ghc-wasm-jsobjects,
    http-media,
    humblr-core,
    humblr-frontend,
    lucid,
    safe-exceptions,
    servant-auth-cloudflare-workers,
    servant-cloudflare-workers,
    streaming,
    streaming-bytestring,
    text,
    time,
    total,
    transformers,
    vector,
    wasm-linear-base,
    web-sys-hs,

  hs-source-dirs: src
  -- cabal-gild: discover src --exclude=src/**/Internal.hs --exclude=src/**/Internal/**/*.hs
  exposed-modules:
    Humblr.Worker.Database
    Humblr.Worker.Images
    Humblr.Worker.Router
    Humblr.Worker.SSR
    Humblr.Worker.Storage
    Humblr.Worker.Utils

  -- cabal-gild: discover src --include=src/**/Internal.hs --include=src/**/Internal/**/*.hs
  other-modules:

executable humblr-router
  import: defaults
  hs-source-dirs: app/router
  main-is: Main.hs
  ghc-options: -O2
  -- cabal-gild: discover app/router --exclude=app/router/Main.hs
  other-modules:

  if os(wasi)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=handlers"
  build-depends: humblr-workers

executable humblr-images
  import: defaults
  hs-source-dirs: app/images
  main-is: Main.hs
  ghc-options: -O2
  -- cabal-gild: discover app/router --exclude=app/router/Main.hs
  other-modules:

  if os(wasi)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=handlers"
  build-depends: humblr-workers

executable humblr-database
  import: defaults
  hs-source-dirs: app/database
  main-is: Main.hs
  ghc-options: -O2
  -- cabal-gild: discover app/database --exclude=app/database/Main.hs
  other-modules:

  if os(wasi)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=handlers"
  build-depends: humblr-workers

executable humblr-storage
  import: defaults
  hs-source-dirs: app/storage
  main-is: Main.hs
  ghc-options: -O2
  -- cabal-gild: discover app/storage --exclude=app/storage/Main.hs
  other-modules:

  if os(wasi)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=handlers"
  build-depends: humblr-workers

executable humblr-ssr
  import: defaults
  hs-source-dirs: app/ssr
  main-is: Main.hs
  ghc-options: -O2
  -- cabal-gild: discover app/storage --exclude=app/storage/Main.hs
  other-modules:

  if os(wasi)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=handlers"
  build-depends: humblr-workers
