cabal-version: 3.4
name: tumblr-to-sqlite
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/konn/humblr/tumblr-to-sqlite#readme>
homepage: https://github.com/konn/humblr#readme
bug-reports: https://github.com/konn/humblr/issues
author: Hiromi ISHII
maintainer: konn.jinro_at_gmail.com
copyright: (c) Hiromi ISHII 2024- present
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
tested-with:
  ghc ==9.10.1

extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/konn/humblr
  subdir: tumblr-to-sqlite

common defaults
  autogen-modules: Paths_tumblr_to_sqlite
  other-modules: Paths_tumblr_to_sqlite
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  default-language: GHC2021
  build-depends: base >=4.7 && <5

library
  import: defaults
  build-depends:
    Glob-effectful,
    aeson,
    async,
    bytestring,
    case-insensitive,
    cmark,
    containers,
    effectful,
    effectful-core,
    effectful-lens,
    generic-lens,
    http-client,
    http-client-tls,
    humblr-core,
    humblr-frontend,
    lens,
    log-effectful,
    log-effectful-extra,
    monad-loops,
    nonce,
    optparse-applicative,
    path,
    path-tagged,
    path-tagged-effectful,
    random-effectful,
    safe-exceptions,
    scalpel,
    servant,
    servant-auth-lite,
    servant-auth-lite-client,
    servant-client,
    servant-client-core,
    stm,
    stm-chans,
    stm-containers,
    tagsoup,
    text,
    time,
    unordered-containers,
    wreq,
    yaml,

  hs-source-dirs: src
  -- cabal-gild: discover src --exclude=src/**/Internal.hs --exclude=src/**/Internal/**/*.hs
  exposed-modules: Humblr.Migration.Tumblr
  -- cabal-gild: discover src --include=src/**/Internal.hs --include=src/**/Internal/**/*.hs
  other-modules:

executable tumblr-to-sqlite
  import: defaults
  hs-source-dirs: app
  main-is: Main.hs
  -- cabal-gild: discover app --exclude=app/Main.hs
  other-modules:
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends: tumblr-to-sqlite

test-suite tumblr-to-sqlite-test
  import: defaults
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  -- cabal-gild: discover test --exclude=test/Test.hs
  other-modules:
  ghc-options:
    -threaded
    -O2
    -rtsopts
    -with-rtsopts=-N

  build-depends: tumblr-to-sqlite
